fixed extra space issue beyond footer

--- a/app/globals.css
+++ b/app/globals.css
@@ -15,8 +15,7 @@
 html {
   margin: 0;
   padding: 0;
-  height: 100%;
-  overflow-x: hidden;
+  width: 100%;
 }
 
 body {
@@ -25,5 +24,4 @@ body {
   font-family: Arial, Helvetica, sans-serif;
   margin: 0;
   padding: 0;
-  min-height: 100%;
 }
